--- a/setup.yaml
+++ b/setup.yaml
@@ -1,7 +1,7 @@
 ---
 users:
   - name: sonaradmin
-    password: SONARUSER_PASSWORD
+    password: $SONARUSER_PASSWORD
     role: createdb, createrole
     
 databases:
