--- a/appz.yml
+++ b/appz.yml
@@ -37,8 +37,8 @@ properties:
     POSTGRESQL_REP_USER: replica
     PGPASSWORD: 
       vault: PGPASSWORD
-    SONARUSER_PASSWORD:
-      vault: SONARUSER_PASSWORD
+    SONAR_JDBC_PASSWORD:
+      vault: SONAR_JDBC_PASSWORD
     APPZ_RESTORE_TOKEN: 20211202-1123
     APPZ_LOAD_TOKEN: 20211202-1123
     revision : 56
